--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,4 @@
 .page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style:  normal;
   font-size: 16px;
